# chatroom

./: .gitignore  build  master.py  message_pb2.py  process  protomake.sh  stopall
docs/: api.aux  api.tex
src/: .gitignore  CMakeLists.txt  main.cpp
src/lib/: message.pb.cc  message.pb.h
src/protobuf/: message.proto
test_output/: alive.output  crash.output  crash2.output  message.output  performance.err  performance.output  performance2.err  performance2.output
tests/: message.input  restart.output
